--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatScope Conversation Overview</title>
     <link rel="icon" type="image/png" href="tpg.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.base.css">
+    <link rel="stylesheet" href="styles.components.css">
 </head>
 
 <body>
