Improve relay resync behavior and refresh user-facing FAQ

--- a/index.html
+++ b/index.html
@@ -931,45 +931,44 @@
                 </div>
                 <ul class="faq-list">
                     <li>
-                        <h3>How do I connect the relay?</h3>
-                        <p>Open the ChatScope Relay desktop app, press Connect, then on your phone go to chat app →
-                            Linked Devices → Link a device and scan the QR code shown here. Once linked, pick any
-                            mirrored chat from “Loaded chats”.</p>
+                        <h3>How do I connect my account?</h3>
+                        <p>Click Connect, then on your phone open chat app → Linked Devices → Link a device and scan
+                            the QR code shown on this screen. After that, choose a conversation from “Loaded chats”.</p>
                     </li>
                     <li>
-                        <h3>Do I need my phone online?</h3>
-                        <p>Yes. Keep your phone connected to the internet like you would for chat app Web. If your phone
-                            sleeps or loses signal, the relay pauses until it reconnects.</p>
+                        <h3>Why do I sometimes see a sync warning, but chats still load?</h3>
+                        <p>Sometimes the first sync method fails. WAAN automatically switches to a backup method so
+                            your chats can still load. In most cases, you can continue using the app normally.</p>
                     </li>
                     <li>
-                        <h3>Which windows should I close first?</h3>
-                        <p>The relay launches a visible chat app browser window. Close that window first so the session
-                            ends safely, then quit the main desktop app.</p>
+                        <h3>Do I need to keep my phone online?</h3>
+                        <p>Yes. Your phone should stay connected to the internet while syncing, similar to using chat
+                            app Web.</p>
                     </li>
                     <li>
                         <h3>Why are export buttons disabled?</h3>
-                        <p>Exports only work after a chat is loaded. Connect the relay and pick a chat—once data
-                            appears, the buttons unlock automatically.</p>
+                        <p>Exports are available only after a chat is loaded. Connect first, then pick a chat from the
+                            list.</p>
                     </li>
                     <li>
                         <h3>Where is my data stored?</h3>
-                        <p>Chats are processed locally in the “ChatScope” folder inside your user Library. Nothing is
-                            uploaded to the cloud unless you choose to share it.</p>
+                        <p>Your data is stored locally on your Mac in WAAN’s app data folder. It is not uploaded
+                            unless you explicitly share exported files.</p>
                     </li>
                     <li>
                         <h3>What are saved views?</h3>
-                        <p>A saved view remembers the filters, date range, and chart state you’re looking at. Name it,
-                            apply it later, or compare two views side-by-side.</p>
+                        <p>Saved views let you bookmark your current filters and chart settings so you can return to
+                            the same analysis later.</p>
                     </li>
                     <li>
-                        <h3>How can I troubleshoot a stuck relay?</h3>
-                        <p>Use the “View relay logs” button to check the live log drawer. If you see repeated errors,
-                            pause the relay, close the Chromium window, then connect again.</p>
+                        <h3>What should I do if syncing seems stuck?</h3>
+                        <p>Try clicking Resync chats. If it still doesn’t move, stop and reconnect the relay, then
+                            try again.</p>
                     </li>
                     <li>
-                        <h3>Can I run the relay without the dashboard?</h3>
-                        <p>Yes. Start it via the command line with <code>npm start --workspace apps/server</code>. Then
-                            open the desktop app and hit Connect to link it.</p>
+                        <h3>What’s the safest way to close the app?</h3>
+                        <p>Disconnect or stop syncing first, then quit the app. If a relay browser window opened, close
+                            that too.</p>
                     </li>
                 </ul>
             </div>
