Add relay state visual tests and update bootstrap functionality

--- a/index.html
+++ b/index.html
@@ -223,6 +223,13 @@
                 <h3 id="dataset-empty-heading">No chat is selected yet.</h3>
                 <p id="dataset-empty-copy">Open the ChatScope Relay desktop app, press Connect, then pick a mirrored
                     chat from “Loaded chats”.</p>
+                <div class="dataset-empty-steps" aria-label="Quick start">
+                    <span class="dataset-empty-step">1. Start relay</span>
+                    <span class="dataset-empty-step">2. Scan QR</span>
+                    <span class="dataset-empty-step">3. Pick chat</span>
+                </div>
+                <button type="button" class="ghost-button small dataset-empty-cta" id="dataset-empty-open-relay">Open
+                    Relay Controls</button>
             </div>
         </div>
 
