Update relay controls, status view, and all visual test snapshots

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </div>
                 <div class="hero-status">
                     <span class="hero-status-badge" id="hero-status-badge">Not connected</span>
-                    <p class="hero-status-copy" id="hero-status-copy">Launch the relay desktop app and press Connect to
+                    <p class="hero-status-copy" id="hero-status-copy">Open Relay Controls, then press Connect to
                         begin.</p>
                     <p class="hero-status-meta" id="hero-status-meta">
                         <span class="hero-sync-dot" id="hero-sync-dot" data-state="idle" aria-hidden="true"></span>
-                        <span id="hero-status-meta-copy">Waiting for relay activity.</span>
+                        <span id="hero-status-meta-copy">Awaiting relay.</span>
                     </p>
                     <div class="hero-milestones" id="hero-milestones" aria-label="Setup progress milestones">
                         <span class="hero-milestone" data-step="connect" data-state="active">Connect</span>
@@ -221,15 +221,8 @@
             </div>
             <div class="dataset-empty-copy">
                 <h3 id="dataset-empty-heading">No chat is selected yet.</h3>
-                <p id="dataset-empty-copy">Open the ChatScope Relay desktop app, press Connect, then pick a mirrored
-                    chat from “Loaded chats”.</p>
-                <div class="dataset-empty-steps" aria-label="Quick start">
-                    <span class="dataset-empty-step">1. Start relay</span>
-                    <span class="dataset-empty-step">2. Scan QR</span>
-                    <span class="dataset-empty-step">3. Pick chat</span>
-                </div>
-                <button type="button" class="ghost-button small dataset-empty-cta" id="dataset-empty-open-relay">Open
-                    Relay Controls</button>
+                <p id="dataset-empty-copy">Open Relay Controls, scan the QR code, then choose a chat from “Loaded
+                    chats”.</p>
             </div>
         </div>
 
