docs: refresh README and FAQ for current relay flows

--- a/index.html
+++ b/index.html
@@ -989,6 +989,12 @@
                             your chats can still load. In most cases, you can continue using the app normally.</p>
                     </li>
                     <li>
+                        <h3>What happens if relay connection drops briefly?</h3>
+                        <p>WAAN automatically retries relay status checks with backoff and recovers when the relay
+                            comes back. You can still use Connect/Resync manually if you want to force a refresh
+                            sooner.</p>
+                    </li>
+                    <li>
                         <h3>Do I need to keep my phone online?</h3>
                         <p>Yes. Your phone should stay connected to the internet while syncing, similar to using chat
                             app Web.</p>
