docs: update WhatsApp naming and add trademark disclaimer

--- a/index.html
+++ b/index.html
@@ -976,11 +976,11 @@
                     </li>
                     <li id="faq-macos-gatekeeper">
                         <h3>macOS says the relay app is damaged or from an unidentified developer. What should I do?</h3>
-                        <p>Open <code>ChatScope Relay.app</code> from Finder, then go to System Settings → Privacy &amp;
+                        <p>Open <code>WAAN.app</code> from Finder, then go to System Settings → Privacy &amp;
                             Security and allow the app under Security by clicking <em>Open Anyway</em>.</p>
                         <p>If blocked again, Control-click the app in Finder and choose <em>Open</em> once.</p>
                         <p>Last resort (Terminal):
-                            <code>xattr -dr com.apple.quarantine "/Applications/ChatScope Relay.app"</code>
+                            <code>xattr -dr com.apple.quarantine "/Applications/WAAN.app"</code>
                         </p>
                     </li>
                     <li>
@@ -1076,6 +1076,10 @@
                         d="M12 2C6.48 2 2 6.59 2 12.26c0 4.53 2.87 8.37 6.84 9.73.5.1.68-.22.68-.49 0-.24-.01-1.04-.01-1.89-2.78.62-3.37-1.22-3.37-1.22-.45-1.18-1.11-1.49-1.11-1.49-.91-.64.07-.63.07-.63 1 .07 1.53 1.06 1.53 1.06.9 1.57 2.35 1.12 2.92.86.09-.67.35-1.12.64-1.38-2.22-.26-4.56-1.14-4.56-5.08 0-1.12.39-2.03 1.03-2.75-.1-.26-.45-1.31.1-2.73 0 0 .84-.28 2.75 1.05A9.31 9.31 0 0 1 12 6.84c.85 0 1.71.12 2.51.35 1.91-1.33 2.75-1.05 2.75-1.05.55 1.42.2 2.47.1 2.73.64.72 1.03 1.63 1.03 2.75 0 3.95-2.34 4.82-4.57 5.07.36.32.68.94.68 1.89 0 1.36-.01 2.45-.01 2.79 0 .27.18.59.69.49A10.25 10.25 0 0 0 22 12.26C22 6.59 17.52 2 12 2z" />
                 </svg>
             </a>
+        </p>
+        <p class="footer-disclaimer">
+            WhatsApp is a trademark of Meta Platforms, Inc. WAAN is an independent project and is not affiliated with
+            Meta or WhatsApp.
         </p>
     </footer>
 
