docs: add privacy notice and FAQ coverage

--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,15 @@
                             unless you explicitly share exported files.</p>
                     </li>
                     <li>
+                        <h3>Does WAAN send my chat content to external servers?</h3>
+                        <p>By default, no. WAAN processes mirrored chat data locally on your device for analytics.</p>
+                        <p>Data leaves your device only when you explicitly export/share artifacts (for example
+                            CSV/JSON/PDF/report files or logs).</p>
+                        <p>See full details in the project privacy notice:
+                            <a href="https://github.com/suyashkmr/WAAN/blob/main/PRIVACY.md" target="_blank" rel="noopener noreferrer">PRIVACY.md</a>.
+                        </p>
+                    </li>
+                    <li>
                         <h3>What are saved views?</h3>
                         <p>Saved views let you bookmark your current filters and chart settings so you can return to
                             the same analysis later.</p>
