--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,8 @@
                 <p class="relay-log-subtitle" id="relay-log-connection">Connecting…</p>
             </div>
             <div class="relay-log-actions">
+                <button type="button" class="ghost-button small" id="relay-log-export">Export Diagnostics</button>
+                <button type="button" class="ghost-button small" id="relay-log-report">Report Issue</button>
                 <button type="button" class="ghost-button small" id="relay-log-clear">Clear</button>
                 <button type="button" class="ghost-button small" id="relay-log-close">Close</button>
             </div>
